#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(gvirtus, 1.0, giuseppe.coviello@uniparthenope.it)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([backend/Backend.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

AC_ARG_WITH([cuda-include], [AC_HELP_STRING([--with-cuda-include=PATH],
    [set PATH to the CUDA include directory])], [
    CUDA_INCLUDE="$withval"
    CUDA_FLAGS="-I$CUDA_INCLUDE"
], [
    CUDA_FLAGS="-I/usr/include"
    CUDA_FLAGS="$CUDA_FLAGS -I/usr/local/cuda/include"
    CUDA_FLAGS="$CUDA_FLAGS -I/opt/cuda/include"
])
CPPFLAGS="$CPPFLAGS $CUDA_FLAGS"

AC_ARG_WITH([cuda-lib], [AC_HELP_STRING([--with-cuda-lib=PATH],
    [set PATH to the CUDA library directory])],
    [
    CUDA_LIB_DIR=$withval
    CUDA_LIB_FLAGS="-L$withval"
], [
    CUDA_LIB_FLAGS="-L/usr/local/cuda/lib"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/usr/local/cuda/lib64"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/opt/cuda/lib"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/opt/cuda/lib64"
])
LDFLAGS="$LDFLAGS $CUDA_LIB_FLAGS"
AC_SUBST(CUDA_LIB_FLAGS)

# Checks for libraries.
AC_CHECK_LIB([expat], [XML_ParserCreate], , AC_MSG_ERROR([Could not find the expat library.]))
AC_CHECK_LIB([cudart], [__cudaRegisterFatBinary], , AC_MSG_ERROR([Could not find the cuda library.]))

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gethostbyname memmove memset socket strcasecmp strdup strtoul])

AC_CHECK_HEADER([cuda.h], [], [
    AC_CHECK_HEADER([cuda.h], ,
        [
            AC_MSG_ERROR([Could not find the cuda header.])
        ])])

CPPFLAGS="$CPPFLAGS -I`pwd`/util -D_CONFIG_FILE=\\\"$sysconfdir/echoes.xml\\\""
CXXFLAGS="$CXXFLAGS -Werror"

AC_CONFIG_FILES([Makefile
                 backend/Makefile
                 frontend/Makefile
                 util/Makefile])
AC_OUTPUT
