#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(gvirtus, 01-beta2, giuseppe.coviello@uniparthenope.it)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([backend/Backend.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

AC_ARG_WITH([vmware-include], [AC_HELP_STRING([--with-vmware-include=PATH],
    [set PATH to the VMware include directory])], [
    VMWARE_INCLUDE="$withval"
    VMWARE_FLAGS="-isystem $VMWARE_INCLUDE"
], [
    VMWARE_FLAGS=""
])
CPPFLAGS="$CPPFLAGS $VMWARE_FLAGS"

AC_ARG_WITH([cuda-include], [AC_HELP_STRING([--with-cuda-include=PATH],
    [set PATH to the CUDA include directory])], [
    CUDA_INCLUDE="$withval"
    CUDA_FLAGS="-isystem $CUDA_INCLUDE"
], [
    CUDA_FLAGS="$CUDA_FLAGS -isystem /usr/local/cuda/include"
    CUDA_FLAGS="$CUDA_FLAGS -isystem /opt/cuda/include"
])
CPPFLAGS="$CPPFLAGS $CUDA_FLAGS"

AC_ARG_WITH([cuda-lib], [AC_HELP_STRING([--with-cuda-lib=PATH],
    [set PATH to the CUDA library directory])],
    [
    CUDA_LIB_DIR=$withval
    CUDA_LIB_FLAGS="-L$withval"
], [
    CUDA_LIB_FLAGS="-L/usr/local/cuda/lib"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/usr/local/cuda/lib64"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/opt/cuda/lib"
    CUDA_LIB_FLAGS="$CUDA_LIB_FLAGS -L/opt/cuda/lib64"
])
LDFLAGS="$LDFLAGS $CUDA_LIB_FLAGS"
AC_SUBST(CUDA_LIB_FLAGS)

# Checks for libraries.
AC_CHECK_LIB([cudart], [__cudaRegisterFatBinary], , AC_MSG_ERROR([Could not find the cuda library.]))
LIBS=""

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h sys/socket.h unistd.h vmci/vmci_sockets.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gethostbyname memmove memset socket strcasecmp strdup strtoul])

AC_CHECK_HEADER([cuda.h], [], [
    AC_CHECK_HEADER([cuda.h], ,
        [
            AC_MSG_ERROR([Could not find the cuda header.])
        ])])

CPPFLAGS="$CPPFLAGS -I`pwd`/util -I`pwd`/frontend -I`pwd`/backend -D_CONFIG_FILE=\\\"$sysconfdir/gvirtus.properties\\\""
CXXFLAGS="$CXXFLAGS -pedantic -Werror"

AC_CONFIG_FILES([Makefile
                 backend/Makefile
                 conf/Makefile
                 frontend/Makefile
                 test/Makefile
                 util/Makefile
		 cuda/Makefile
		 cuda/backend/Makefile
		 cuda/frontend/Makefile
		 cudadr/Makefile
		 cudadr/backend/Makefile
		 cudadr/frontend/Makefile
		 opengl/Makefile
		 opengl/backend/Makefile
		 opengl/frontend/Makefile
		])
AC_OUTPUT
