lib_LTLIBRARIES = libgvirtus-frontend.la
libgvirtus_frontend_la_SOURCES = \
CudaRt.cpp\
CudaRt_device.cpp\
CudaRt_error.cpp\
CudaRt_event.cpp\
CudaRt_execution.cpp\
CudaRt.h\
CudaRt_internal.cpp\
CudaRt_memory.cpp\
CudaRt_opengl.cpp\
CudaRt_stream.cpp\
CudaRt_texture.cpp\
CudaRt_thread.cpp\
CudaRt_version.cpp\
Frontend.cpp\
Frontend.h
libgvirtus_frontend_la_LIBADD = ../util/libutil.a -lexpat

